# GEANT-RADiCAL

./: .gitignore  CLAUDE.md  CMakeLists.txt  ESTIMATES.md  README.md  configure.sh  radical.cc
analysis/: analyze_resolution.py  requirements.txt
include/: ActionInitialization.hh  CaloHit.hh  CaloSD.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  NtupleDef.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RadicalConstants.hh  RadicalMaterials.hh  RunAction.hh  SteppingAction.hh
macros/: init_vis.mac  run.mac  scan_array3x3.mac  scan_energy.mac  scan_energy_fast.mac  scan_enhanced.mac  scan_hex.mac  scan_resolution.mac  scan_timing.mac  vis.mac
results/: README.md  resolution_summary.csv  resolution_summary_array3x3.csv  resolution_summary_enhanced.csv  resolution_summary_enhanced5.csv  resolution_summary_hex.csv
results/geometry/: README.md
src/: ActionInitialization.cc  CaloSD.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RadicalMaterials.cc  RunAction.cc  SteppingAction.cc
